# Signal-Lake

./: .env.example  .gitignore  README.md  docker-compose.yml  project_directory.txt  pyproject.toml  requirements.txt
.spyproject/config/: workspace.ini
app/: dashboard.py
config/: settings.yml
src/: __init__.py  config.py  dashboard-test.py  data_ingest.py  db.py  features.py  indicators.py  main.py  models.py  models_test.py
