[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-lake"
version = "0.1.0"
description = "Real‑time forecasting lakehouse"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.9"

# Leave dependencies empty; they’re already in requirements.txt / environment.yml
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]          # <─ tell setuptools that packages live in src/
